<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigationHome">

    <fragment
        android:id="@+id/navigationHome"
        android:name="com.example.androidexpert2.view.HomeFragment"
        android:label="@string/titleHome"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/actionNavigationHomeToDetailActivity"
            app:destination="@+id/detailActivity"
            />
    </fragment>

    <fragment
        android:id="@+id/navigationFavorite"
        android:name="com.example.androidexpert2.favorite.FavoriteFragment"
        android:label="@string/titleFavorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_navigation_favorite_to_detail_activity"
            app:destination="@id/detailActivity" />

    </fragment>


    <fragment
        android:id="@+id/navigationSetting"
        android:name="com.example.androidexpert2.view.SettingFragment"
        android:label="@string/titleSetting"
        tools:layout="@layout/fragment_setting" />

    <activity
        android:id="@+id/detailActivity"
        android:name="com.example.androidexpert2.view.DetailActivity"
        android:label="activity_detail"
        tools:layout="@layout/activity_detail">
        <argument
            android:name="id"
            app:argType="integer" />
    </activity>

</navigation>